# datafusion-catalogprovider-glue

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: draft_release.yml  publish_artifacts.yml  published_release.yml
examples/: demo.rs
src/: error.rs  glue_datatype.pest  lib.rs
src/catalog_provider/: delta_table.rs  glue.rs  glue_catalog_provider.rs  glue_data_type_parser.rs  glue_schema_provider.rs  glue_table.rs  mod.rs
src/glue_data_type_parser/: glue_datatype.pest  mod.rs
