[package]
edition = "2021"
name = "datafusion-catalogprovider-glue"
description = "Glue as a CatalogProvider for Datafusion"
version = "0.4.0"
homepage = "https://github.com/datafusion-contrib/datafusion-catalogprovider-glue"
repository = "https://github.com/datafusion-contrib/datafusion-catalogprovider-glue"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
license = "Apache-2.0"
keywords = [ "arrow", "datafusion", "aws", "glue" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_catalogprovider_glue"
path = "src/lib.rs"

[dependencies]
aws-config = "1"
aws-sdk-glue = "1"
aws-types = "1"
datafusion = { version = "37", features = ["avro"] }
deltalake = {version = "0.17", optional=true, features=["datafusion", "deltalake-aws", "s3"]}
object_store = { version = "0.9.0", features = ["aws"] }
pest = "2.3"
pest_derive = "2.3"
tokio = { version = "1.36", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"]}
futures = "0"
url = "2.2"
log = "0"
async-trait = "0"

[dev-dependencies]
env_logger = "0"

[features]
default = []
deltalake = [
    "dep:deltalake"
]
