[package]
edition = "2021"
name = "datafusion-catalogprovider-glue"
description = "Glue as a CatalogProvider for Datafusion"
version = "0.2.1"
homepage = "https://github.com/datafusion-contrib/datafusion-catalogprovider-glue"
repository = "https://github.com/datafusion-contrib/datafusion-catalogprovider-glue"
readme = "README.md"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
license = "Apache-2.0"
keywords = [ "arrow", "datafusion", "aws", "glue" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datafusion_catalogprovider_glue"
path = "src/lib.rs"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-glue = "1.25.0"
aws-types = "1.2.0"
datafusion = { version = "37.0.0", features = ["avro"] }
object_store = { version = "0.9.1", features = ["aws"] }
pest = "2.3"
pest_derive = "2.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
url = "2.2"
